load("@rules_java//java:defs.bzl", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

# client-java-extended — informers, controllers, leader election, and more
java_library(
    name = "client-java-extended",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//fluent:client-java-api-fluent",
        "//kubernetes:client-java-api",
        "//util:client-java",
        "@maven//:com_bucket4j_bucket4j_core",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_squareup_okhttp3_okhttp_jvm",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

java_test_suite(
    name = "tests",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**"]),
    runner = "junit5",
    deps = [
        ":client-java-extended",
        "//kubernetes:client-java-api",
        "//util:client-java",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_awaitility_awaitility",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_junit_jupiter",
        "@maven//:org_wiremock_wiremock",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
    ],
)
