load("@rules_java//java:defs.bzl", "java_library")

# client-java-api-fluent — generated fluent DSL for the Kubernetes API types
java_library(
    name = "client-java-api-fluent",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//kubernetes:client-java-api",
    ],
)
