load("@rules_java//java:defs.bzl", "java_library")

# client-java-proto — pre-compiled protobuf-generated Java classes
java_library(
    name = "client-java-proto",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)
