load("@rules_java//java:defs.bzl", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

# client-java-spring-integration requires Java 17 (Spring Boot 3+).
_JAVA17_OPTS = ["--release", "17"]

# client-java-spring-integration — Spring Boot autoconfiguration for the Kubernetes client
java_library(
    name = "client-java-spring-integration",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = _JAVA17_OPTS,
    visibility = ["//visibility:public"],
    deps = [
        "//extended:client-java-extended",
        "//kubernetes:client-java-api",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_yaml_snakeyaml",
    ],
)

java_test_suite(
    name = "tests",
    srcs = glob(["src/test/java/**/*.java"]),
    javacopts = _JAVA17_OPTS,
    runner = "junit5",
    deps = [
        ":client-java-spring-integration",
        "//extended:client-java-extended",
        "//kubernetes:client-java-api",
        "//util:client-java",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_awaitility_awaitility",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_springframework_boot_spring_boot_test",
        "@maven//:org_springframework_spring_test",
        "@maven//:org_wiremock_wiremock",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
    ],
)
