load("@rules_java//java:defs.bzl", "java_library")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")

# client-java — core Kubernetes client (auth, watches, informers, etc.)
java_library(
    name = "client-java",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//kubernetes:client-java-api",
        "//proto:client-java-proto",
        "@maven//:com_google_auth_google_auth_library_oauth2_http",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_squareup_okhttp3_okhttp_jvm",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:commons_codec_commons_codec",
        "@maven//:commons_io_commons_io",
        "@maven//:io_prometheus_simpleclient",
        "@maven//:io_prometheus_simpleclient_httpserver",
        "@maven//:jakarta_annotation_jakarta_annotation_api",
        "@maven//:org_apache_commons_commons_collections4",
        "@maven//:org_apache_commons_commons_compress",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_bitbucket_b_c_jose4j",
        "@maven//:org_bouncycastle_bcpkix_jdk18on",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_yaml_snakeyaml",
        "@maven//:software_amazon_awssdk_sts",
    ],
)

java_test_suite(
    name = "tests",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**"]),
    runner = "junit5",
    deps = [
        ":client-java",
        "//kubernetes:client-java-api",
        "@maven//:com_squareup_okhttp3_okhttp_jvm",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_awaitility_awaitility",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_junit_jupiter",
        "@maven//:org_wiremock_wiremock",
        "@maven//:uk_org_webcompere_system_stubs_jupiter",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
    ],
)
